# waveorder

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config_.yml  pyproject.toml  runReconstruction.py  run_pipeline.py  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: pr.yml  pytests.yml  test.yml  test_and_deploy.yml
benchmarks/: README.md  __init__.py  config.py  metrics.py  runner.py  simulate.py  utils.py
benchmarks/configs/: fluor_3d_beads.yml  ops_pheno_phase_2d.yml  ops_pheno_phase_2d_opt.yml  phase_3d_beads.yml
benchmarks/experiments/: regression.yml
deconorder/compute/: __init__.py
deconorder/data/: __init__.py
deconorder/examples/: config_example.yml
deconorder/io/: config_reader.py
deconorder/tests/: config_test.py
deconorder/viewer/: __init__.py
docs/: QLIPP.md  README.md  api.rst  buyers-guide.md  calibration-guide.md  command-line-guide.md  command-line-interface.md  conf.py  contact_us.rst  data-schema.md  development-guide.md  examples.rst  guide.rst  index.rst  microscope-installation-guide.md  napari-plugin-guide.md  recOrder_Installation.md  recOrder_UserGuide.md  reconstruction-guide.md  setup-guide.md  software-installation-guide.md  triggerscope-setup-guide.md  tutorial.md  user-guide.md
docs/_static/: switcher.json
docs/api/: settings.rst
docs/examples/: README.md
docs/guide/: QLIPP.md  buyers-guide.md  development-guide.md  microscope-installation-guide.md  napari-plugin-guide.md  reconstruction-guide.md  software-installation-guide.md
docs/scripts/: fix_md_links.py
docs/sphinx_source/: api.rst  conf.py  examples.rst  guide.rst  index.rst  requirements.txt  sg_execution_times.rst
docs/valuable-prs/: 2023-02-27.110.pr.open.md
example/: IO_waveorder.ipynb  PolPhase_data_IO.ipynb  PolPhase_data_IO_702_batch.ipynb  PolPhase_data_IO_722.ipynb  PolPhase_data_IO_722_batch.ipynb  PolPhase_data_IO_722_batch.py  PolPhase_data_IO_722_test.ipynb  PolPhase_data_IO_dragon.ipynb  PolPhase_data_IO_humming_bird.ipynb  PolPhase_data_IO_hummingbird_parallel_gpu.ipynb  Polscope_Phase_data_IO_719_batch_gpu_parallel.ipynb  Polscope_Phase_data_IO_722_batch_gpu.ipynb  Polscope_Phase_data_IO_dragon.ipynb  Polscope_phase_forward_sim.ipynb  Polscope_phase_pos.ipynb  Polscope_phase_recon.ipynb
example/2D_Pol_Phase/: Polscope_phase_forward_discrete_Source.ipynb  Polscope_phase_forward_sim.ipynb  Polscope_phase_recon.ipynb  Polscope_phase_recon_nonlinear.ipynb
example/2D_Pol_Phase_inclination/: Pol_Phase_inc_forward_sim.ipynb  Polscope_phase_recon.ipynb
example/2D_QLIPP_simulation/: 2D_QLIPP_forward.ipynb  2D_QLIPP_recon.ipynb
example/3D_PODT_phase_simulation/: 3D_PODT_Phase_forward.ipynb  3D_PODT_Phase_recon.ipynb
example/3D_Phase/: 3D_PODT_Phase_forward.ipynb  3D_PODT_Phase_recon.ipynb
example/3D_Pol_Phase/: 2D_Polscope_phase_recon_inc_vec.ipynb  3D_PODT_Phase_forward.ipynb  3D_PODT_Phase_recon.ipynb  3D_Polscope_phase_forward.ipynb  3D_Polscope_phase_recon_inc.ipynb
example/uPTI_simulation/: 2D_uPTI_recon.ipynb  3D_uPTI_forward.ipynb  3D_uPTI_recon.ipynb
examples/: 3D-bf-to-2D-phase.py  3D-bf-to-3D-phase.py  3D-fluor-to-3D-density.py  3D-pol-to-birefringence.py  README.md  birefringence-and-phase.yml  birefringence.yml  fluorescence.yml  multi-modal-recon.py  parallel-reconstruct.py  phase.yml  recon-phase-from-bf.py  recon-qlipp.py  sweep-regularization.py
examples/2D_QLIPP_simulation/: 2D_QLIPP_forward.ipynb  2D_QLIPP_forward.py  2D_QLIPP_recon.ipynb  2D_QLIPP_recon.py
examples/3D_PODT_phase_simulation/: 3D_PODT_Phase_forward.ipynb  3D_PODT_Phase_forward.py  3D_PODT_Phase_recon.ipynb  3D_PODT_Phase_recon.py
examples/PODT_phase_simulation/: isotropic_thin_3d.py  phase2D_3D.py  phase2Dto3D.py  phase3D_3D.py  phase3Dto3D.py  phase_absorption_2Dspecimen.py
examples/PTI_experiment/: PTI_Experiment_Recon3D_anisotropic_target_small.py  PTI_full_FOV_cardiomyocyte_infected_1.py  PTI_full_FOV_cardiomyocyte_mock.py
examples/PTI_simulation/: PTI_Simulation_Forward_2D3D.ipynb  PTI_Simulation_Forward_2D3D.py  PTI_Simulation_Recon2D.ipynb  PTI_Simulation_Recon2D.py  PTI_Simulation_Recon3D.ipynb  PTI_Simulation_Recon3D.py
examples/QLIPP_experiment/: 3D_QLIPP_recon_experiment.ipynb
examples/QLIPP_simulation/: 2D_QLIPP_forward.py
examples/configs/: README.md  birefringence.yml
examples/legacy/: README.md
gradio-demo/: demo_utils.py  optimize_demo.py
notebooks/: QLIPP_Calibration_Notebook.ipynb  Reconstruction_PhaseFromBF.ipynb  Reconstruction_QLIPP.ipynb
plans/: projection_modeling_plan.md
recOrder/: __init__.py  _version.py  cli_module.py  napari.yaml  recOrder_ui.py
requirements/: default.txt  test.txt
scripts/: convert_tiff_to_zarr.py  help.py  launch_napari.py  md5_check_sum.py  run_pipeline.py
tests/: conftest.py  test_benchmark_cleanup.py  test_benchmark_cli.py  test_benchmark_crop.py  test_benchmark_metrics.py  test_benchmark_reference.py  test_benchmark_reference_metrics.py  test_benchmark_reference_parameters.py  test_benchmark_runner.py  test_benchmark_simulate.py  test_benchmark_utils.py  test_correction.py  test_examples.py  test_filter.py  test_focus_estimator.py  test_optics.py  test_phantoms.py  test_phantoms_ring_beads.py  test_sampling.py  test_stokes.py  test_util.py  test_zernike_seidel.py
waveorder/: DPC.py  __init__.py  _version.py  background_estimator.py  correction.py  device.py  filter.py  focus.py  focus_estimator.py  linalg.py  napari.yaml  optics.py  phantoms.py  phase.py  projection.py  reconstruct.py  sampling.py  stokes.py  util.py  visual.py  waveorder_WOTF.py  waveorder_reconstructor.py  waveorder_simulator.py  zernike.py
waveorder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
waveorder_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
waveorders/: __init__.py  visual.py  waveorders_WOTF.py
waveordertest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+508 files in other folders)
