[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]

[project]
name = "waveorder"
description = "Wave-optical simulations and deconvolution of optical properties"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CZ Biohub SF", email = "compmicro@czbiohub.org" }]
maintainers = [
  { name = "Talon Chandler", email = "talon.chandler@czbiohub.org" },
  { name = "Shalin Mehta", email = "shalin.mehta@czbiohub.org" },
]
keywords = [
  "simulation",
  "optics",
  "phase",
  "scattering",
  "polarization",
  "label-free",
  "permittivity",
  "reconstruction-algorithm",
  "qlipp",
  "mipolscope",
  "permittivity-tensor-imaging",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
]
dependencies = [
  "click>=8.0.1",
  "colorspacious>=1.1.2",
  "importlib-metadata",
  "iohub @ git+https://github.com/czbiohub-sf/iohub.git@xarray-integration",
  "ipywidgets>=7.5.1",
  "matplotlib>=3.1.1",
  "natsort>=7.1.1",
  "numpy>=1.24",
  "psutil",
  "pyqtgraph>=0.12.3",
  "pydantic",
  "pywavelets>=1.1.1",
  "scipy>=1.3.0",
  "torch>=2.4.1",
  "qtpy",
  "wget>=3.2",
]
dynamic = ["version"]

[project.optional-dependencies]
visual = [
  "napari[pyqt6]",
  "PyQt6>=6.5,<6.8",  # Constrain to versions with manylinux_2_28 support for older Linux systems
  "napari-ome-zarr>=0.3.2", # drag and drop convenience
  "pycromanager==0.27.2",
  "jupyter",
  "jupytext",
]

[dependency-groups]
test = [
  "click>=8.2.0",
  "hypothesis",
  "napari[pyqt6]",
  "PyQt6>=6.5,<6.8",
  "pytest-cov",
  "pytest-qt",
  "pytest>=5.0.0",
]
docs = [
  "sphinx_copybutton",
  "sphinxcontrib-video",
  "myst_parser",
  "sphinx_mdinclude",
  "linkify-it-py",
  "numpydoc",
  "sphinx_sitemap",
  "sphinx_gallery",
  "pydata_sphinx_theme",
  "matplotlib",
  "importlib_metadata",
]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
]

[project.urls]
Homepage = "https://github.com/mehta-lab/waveorder"
Repository = "https://github.com/mehta-lab/waveorder"
Issues = "https://github.com/mehta-lab/waveorder/issues"

[project.scripts]
waveorder = "waveorder.cli.main:cli"
wo = "waveorder.cli.main:cli"

[project.entry-points."napari.manifest"]
waveorder = "waveorder:napari.yaml"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"
