[metadata]
name = recOrder-napari
author = Computational Microscopy Platform, CZ Biohub
author_email = shalin.mehta@czbiohub.org
url = https://github.com/mehta-lab/recOrder
license = BSD 3-Clause License
description = Computational microscopy toolkit for label-free imaging
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Visualization
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Utilities
	Framework :: napari
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
project_urls =
	Bug Tracker = https://github.com/mehta-lab/recOrder/issues
	Documentation = https://github.com/mehta-lab/recOrder/wiki
	Source Code = https://github.com/mehta-lab/recOrder/tree/main/recOrder
	User Support = https://github.com/mehta-lab/recOrder/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
	waveorder==1.0.0rc0
	pycromanager==0.19.2
	click>=8.0.1
	pyyaml>=5.4.1
	tqdm>=4.61.1
	opencv-python>=4.5.3.56 # candidate for deletion 1.0
	natsort>=7.1.1
	colorspacious>=1.1.2
	pyqtgraph>=0.12.3
	superqt>=0.2.4
	napari-ome-zarr>=0.3.2 # drag and drop convenience
	qtpy # napari best practice (PyQt5 and PySide2 wrapper)
	napari[all] # uses pip-installed PyQt5 by default
	imageio!=2.11.0,!=2.22.1 # matching napari PR #5168, candidate for removal after the upstream issue is fixed
	importlib-metadata

[options.extras_require]
dev =
	pytest>=5.0.0
	pytest-cov
	pytest-qt
	wget>=3.2
	tox
	pre-commit
	black

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
	recorder = recOrder.scripts.cli:help
	recorder.reconstruct = recOrder.scripts.cli:reconstruct
	recorder.convert = recOrder.scripts.cli:convert
	recOrder = recOrder.scripts.cli:help
	recOrder.reconstruct = recOrder.scripts.cli:reconstruct
	recOrder.convert = recOrder.scripts.cli:convert

napari.manifest =
	recOrder = recOrder:napari.yaml
