[metadata]
name = recOrder-napari
author = Computational Microscopy Platform, CZ Biohub
author_email = shalin.mehta@czbiohub.org
url = https://github.com/mehta-lab/recOrder
license = BSD 3-Clause License
description = Computational microscopy toolkit for label-free imaging
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Visualization
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Utilities
	Framework :: napari
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Operating System :: Unix
	Operating System :: MacOS
project_urls =
	Bug Tracker = https://github.com/mehta-lab/recOrder/issues
	Documentation = https://github.com/mehta-lab/recOrder/wiki
	Source Code = https://github.com/mehta-lab/recOrder/tree/main/recOrder
	User Support = https://github.com/mehta-lab/recOrder/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
	waveorder==2.2.0rc0
	click>=8.0.1
	natsort>=7.1.1
	colorspacious>=1.1.2
	importlib-metadata
	iohub==0.1.0
	wget>=3.2
	psutil
	pydantic>=1.10.17
	
[options.extras_require]
dev =
	pytest>=5.0.0
	pytest-cov
	pytest-qt
	tox
	pre-commit
	black
	hypothesis

acq =
	pycromanager==0.27.2
	pyqtgraph>=0.12.3
	napari-ome-zarr>=0.3.2 # drag and drop convenience
	ome-zarr==0.8.3 # unpin when resolved: https://github.com/ome/napari-ome-zarr/issues/111
	napari[pyqt6]

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
	recorder = recOrder.cli.main:cli
	recOrder = recOrder.cli.main:cli
	
napari.manifest =
	recOrder = recOrder:napari.yaml
